--- a/foundry.toml
+++ b/foundry.toml
@@ -4,8 +4,9 @@ out = "out"
 libs = ["lib"]
 
 remappings = [
-    "ds-test/=lib/ds-test/src/",
     "forge-std/=lib/forge-std/src/",
     "@openzeppelin/=lib/openzeppelin-contracts/",
     "@velodrome/=lib/contracts/"
 ]
+
+fs_permissions = [{ access = "read-write", path = "./"}]
