[WIP] AutoCompounder Deployment (#3)
* create deploy script

* deploy test

* chore: format

* deploy to tenderly

* feedback, deploy docs

* chore: improve tenderly docs

* chore: fix ci

* chore: revert constant changes

--- a/foundry.toml
+++ b/foundry.toml
@@ -10,3 +10,9 @@ remappings = [
 ]
 
 fs_permissions = [{ access = "read-write", path = "./"}]
+
+[rpc_endpoints]
+optimism = "${OPTIMISM_RPC_URL}"
+
+[etherscan]
+optimism = { key = "${OPTIMISM_SCAN_API_KEY}", url = "${OPTIMISM_ETHERSCAN_VERIFIER_URL}" }
