--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,8 @@ OPTIMISM_RPC_URL="https://opt-mainnet.g.alchemy.com/v2/<Enter alchemy optimism a
 OPTIMISM_SCAN_API_KEY=
 OPTIMISM_ETHERSCAN_VERIFIER_URL=https://api-optimistic.etherscan.io/api
 
+TENDERLY_FORK_ID=
+TENDERLY_DEVNET_TEMPLATE=
+TENDERLY_DEVNET_ID=
+
 FORK_BLOCK_NUMBER=105550759
