docs: relay, autocompounder and autoconverter (#39)
* docs: relay, autocompounder and autoconverter

* docs: include autoconverter deployment

* fix: autoconverter deployment with optimizer

* feat: prettier for markdown

* style: format

* fix: improve readability

* docs: high liquidity tokens and autoconverter info

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,6 +8,14 @@
         "useTabs": false,
         "bracketSpacing": false
       }
+    },
+    {
+      "files": "**.md",
+      "options": {
+        "printWidth": 120,
+        "tabWidth": 4,
+        "useTabs": false
+      }
     }
   ]
 }
