--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "format": "prettier --write 'src/**/*.(sol|json)' 'test/**/*.(sol|json)' 'script/**/*.(sol|ts)'",
-    "format:check": "prettier --check 'src/**/*.*(sol|json)' 'test/**/*.(sol|json)' 'script/**/*.(sol|ts)'",
+    "format": "prettier --write 'src/**/*.(sol|json)' 'test/**/*.(sol|json)' 'script/**/*.(sol|ts)' 'script/**/*.(md)' 'README.md'",
+    "format:check": "prettier --check 'src/**/*.*(sol|json)' 'test/**/*.(sol|json)' 'script/**/*.(sol|ts)' 'script/**/*.(md)' 'README.md'",
     "lint": "solhint --fix 'src/**/*.sol' 'test/**/*.sol' 'script/**/*.sol'",
     "lint:check": "solhint 'src/**/*.sol' 'test/**/*.sol' 'script/**/*.sol'"
   }
